--- a/index.html
+++ b/index.html
@@ -31,11 +31,18 @@
 
   <header id="home">
     <img src="images/profile.jpg" alt="Praneeth Koduru" class="profile-photo large" />
-    <h1>Hi, I'm Praneeth Koduru</h1>
-    <p>Product Manager | Scrum Master | Business Analyst | Technical Product Owner</p>
-    <p>
-      I thrive at the crossroads of business strategy and team execution. With 6+ years across healthcare and transportation, I’ve led Agile teams, driven digital transformations, and delivered features that improved team efficiency and user satisfaction. Now, I’m focused on building intuitive, scalable products that solve real problems and create real impact. Let’s build something meaningful together.
-    </p>
+  <h1>Hi, I'm Praneeth Koduru</h1>
+  <p>Product Manager | Scrum Master | Business Analyst | Technical Product Owner</p>
+  <p>
+    I thrive at the crossroads of business strategy and team execution. With 6+ years across healthcare and transportation, I’ve led Agile teams, driven digital transformations, and delivered features that improved team efficiency and user satisfaction. Now, I’m focused on building intuitive, scalable products that solve real problems and create real impact. Let’s build something meaningful together.
+  </p>
+
+  <div class="intro-buttons">
+    <a href="#projects" class="btn primary-btn">View my Work →</a>
+    <a href="files/Praneeth_Koduru_Resume.pdf" download class="btn secondary-btn">
+      Download Resume ⬇️
+    </a>
+  </div>
   </header>
 
   <section id="about">
