--- a/index.html
+++ b/index.html
@@ -38,10 +38,34 @@
   </p>
 
   <div class="intro-buttons">
-    <a href="#projects" class="btn primary-btn">View my Work →</a>
-    <a href="files/Praneeth_Koduru_Resume.pdf" download class="btn secondary-btn">
-      Download Resume ⬇️
+    <a href="#projects" class="btn primary-btn">
+      View my Work
+      <svg width="16" height="16" fill="none" stroke="#121212" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-left:6px;">
+        <path d="M5 12l5-5-5-5" />
+      </svg>
     </a>
+    <a href="files/Praneeth_Koduru_Resume.pdf" download class="btn secondary-btn">
+      <svg width="16" height="16" fill="none" stroke="#03a9f4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right:6px;">
+        <path d="M12 12v-6M8 12v-8M4 12v-4M8 16v-4" />
+        <path d="M4 16h8" />
+      </svg>
+      Download Resume
+    </a>
+  </div>
+
+  <div class="indicators">
+    <div class="indicator">
+      <strong>6+ Years</strong><br />
+      Experience
+    </div>
+    <div class="indicator">
+      <strong>—</strong><br />
+      Projects Delivered
+    </div>
+    <div class="indicator">
+      <strong>—</strong><br />
+      Teams Led
+    </div>
   </div>
   </header>
 
