--- a/index.html
+++ b/index.html
@@ -1,249 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Praneeth Koduru | Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
-</head>
-<body class="dark-mode">
-  <div id="tsparticles"></div>
+/* Gradient for Hi, I'm Praneeth Koduru */
+.intro-name {
+  font-size: 3rem; /* Bigger than h1 if needed */
+  font-weight: 900;
+  background: linear-gradient(135deg, #03a9f4, #7b1fa2); /* Blue to Purple */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: inline-block;
+  margin-bottom: 10px;
+  text-shadow: none; /* no glow */
+}
 
-  <!-- 🌐 Top Navigation -->
-  <nav class="top-nav">
-    <div class="nav-container">
-      <div class="logo">Praneeth Koduru</div>
-      <div class="hamburger" onclick="toggleMenu()">☰</div>
-      <ul class="nav-links" id="navLinks">
-        <li><span class="close-btn" onclick="toggleMenu()">✕</span></li>
-        <li><a href="#home" onclick="closeMenu()">Home</a></li>
-        <li><a href="#about" onclick="closeMenu()">About</a></li>
-        <li><a href="#experience" onclick="closeMenu()">Experience</a></li>
-        <li><a href="#education" onclick="closeMenu()">Education</a></li>
-        <li><a href="#certifications" onclick="closeMenu()">Certifications</a></li>
-        <li><a href="#projects" onclick="closeMenu()">Projects</a></li>
-        <li><a href="#skills" onclick="closeMenu()">Skills</a></li>
-        <li><a href="#contact" onclick="closeMenu()">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
+/* Titles below intro-name */
+.intro-titles {
+  font-size: 1.5rem; /* smaller than intro-name but bigger than body */
+  font-weight: 600;
+  color: #90caf9; /* lighter blue */
+  margin-bottom: 20px;
+  letter-spacing: 0.03em;
+  text-align: center;
+}
 
-  <header id="home">
-    <img src="images/profile.jpg" alt="Praneeth Koduru" class="profile-photo large" />
-  <h1>Hi, I'm Praneeth Koduru</h1>
-  <p>Product Manager | Scrum Master | Business Analyst | Technical Product Owner</p>
-  <p>
-    I thrive at the crossroads of business strategy and team execution. With 6+ years across healthcare and transportation, I’ve led Agile teams, driven digital transformations, and delivered features that improved team efficiency and user satisfaction. Now, I’m focused on building intuitive, scalable products that solve real problems and create real impact. Let’s build something meaningful together.
-  </p>
+.intro-titles span {
+  display: inline-block;
+  margin: 0 8px;
+  font-weight: 700;
+  background: linear-gradient(135deg, #7b1fa2, #f50057); /* purple to pink gradient */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  cursor: default;
+  user-select: none;
+}
 
-  <div class="intro-buttons">
-    <a href="#projects" class="btn primary-btn">
-      View my Work
-      <svg width="16" height="16" fill="none" stroke="#121212" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-left:6px;">
-        <path d="M5 12l5-5-5-5" />
-      </svg>
-    </a>
-    <a href="files/Praneeth_Koduru_Resume.pdf" download class="btn secondary-btn">
-      <svg width="16" height="16" fill="none" stroke="#03a9f4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-right:6px;">
-        <path d="M12 12v-6M8 12v-8M4 12v-4M8 16v-4" />
-        <path d="M4 16h8" />
-      </svg>
-      Download Resume
-    </a>
-  </div>
+/* Remove glow effect from 'View my work' link */
+.view-work {
+  text-shadow: none !important;
+  color: #03a9f4;
+  font-weight: 600;
+  font-size: 1.1rem;
+  transition: color 0.3s ease;
+  text-decoration: none;
+}
 
-  <div class="indicators">
-    <div class="indicator">
-      <strong>6+ Years</strong><br />
-      Experience
-    </div>
-    <div class="indicator">
-      <strong>—</strong><br />
-      Projects Delivered
-    </div>
-    <div class="indicator">
-      <strong>—</strong><br />
-      Teams Led
-    </div>
-  </div>
-  </header>
-
-  <section id="about">
-    <h2 class="gradient-header">About Me</h2>
-    <p>
-      I come from humble beginnings in India, where my father instilled in me the belief that education is the key that sets us apart. During my undergraduate studies, I set my sights on pursuing a master’s degree abroad—not just for academic growth, but to gain invaluable exposure to new cultures and perspectives.
-    </p>
-    <p>
-      Learning is a lifelong journey. My family of graduates inspires me to grow continuously and give back. I aim to build user-centered digital solutions that align business strategy with real user needs.
-    </p>
-  </section>
-
-  <section id="experience">
-    <h2 class="gradient-header">Experience</h2>
-    <!-- (All experience cards remain unchanged) -->
-  </section>
-
-  <section id="education">
-    <h2 class="gradient-header">Education</h2>
-    <div class="experience-grid">
-      <div class="experience-card">
-        <h3>University of North Texas <span>2021 – 2023</span></h3>
-        <h4>Master of Science – Computer Engineering</h4>
-      </div>
-      <div class="experience-card">
-        <h3>Gandhi Institute of Technology <span>2013 – 2017</span></h3>
-        <h4>Bachelor of Technology – Electronics & Communication Engineering</h4>
-      </div>
-    </div>
-  </section>
-
-  <section id="certifications">
-    <h2 class="gradient-header">Certifications</h2>
-    <div class="cert-grid">
-
-      <div class="cert-card">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/PMI_logo.svg" alt="PMP Badge" />
-        <div>
-          <strong>Project Management Professional (PMP) – Project Management Institute (PMI)</strong>
-          <p>Validated advanced project planning, leadership, stakeholder and risk management across complex projects.</p>
-        </div>
-      </div>
-
-      <div class="cert-card">
-        <img src="https://media.licdn.com/dms/image/D4E0BAQEfhU1nl8sl4A/company-logo_200_200/0/1708570642886?e=2147483647&v=beta&t=nF9nfdEPY6_kHF2IffOfIl-T3G4PUhV40oxrgftZCHM" alt="Atlassian Agile Badge" />
-        <div>
-          <strong>Atlassian Agile Project Management Professional Certificate – Atlassian University</strong>
-          <p>Learned Agile principles, sprint planning, Jira workflows, and Agile team collaboration best practices.</p>
-          <a href="https://www.linkedin.com/learning/certificates/5d127e3c541d0806e7728f64dadc958a3788590707273c9e0b6e5d698d7ebf3c" target="_blank">View Credential</a>
-        </div>
-      </div>
-
-      <div class="cert-card">
-        <img src="https://images.credly.com/images/28944964-3097-403d-a9a2-9718f2d4c353/image.png" alt="PSPO I Badge" />
-        <div>
-          <strong>Professional Scrum Product Owner I (PSPO I) – Scrum.org</strong>
-          <p>Developed expertise in maximizing product value, managing backlogs, and applying Scrum principles in real-world scenarios.</p>
-          <a href="https://www.credly.com/badges/49ba24bb-d48a-4b16-96a5-a88285b1510f/linked_in_profile" target="_blank">View Credential</a>
-        </div>
-      </div>
-
-      <div class="cert-card">
-        <img src="https://media.licdn.com/dms/image/D4E0BAQFeRQ3vSMvxnw/learning-public-crop_288_512/0/1693492517676?e=2147483647&v=beta&t=KMeFnJNjA3czkgb3j5INXaDCmDyQtkjXYA5sNFZoHRY" alt="Gen AI Badge" />
-        <div>
-          <strong>Generative AI for Product Managers – LinkedIn Learning</strong>
-          <p>Explored how to apply generative AI in product discovery, user research, content creation, and roadmap planning.</p>
-          <a href="https://www.linkedin.com/learning/certificates/a41f8e4e6745809068443816da56340b0664a50913b7bef5d57fae84e3cbf579" target="_blank">View Credential</a>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-  <section id="skills">
-    <h2 class="gradient-header">Skills</h2>
-    <!-- Skills layout remains unchanged -->
-  </section>
-
-  <section id="projects">
-    <h2 class="gradient-header">Projects</h2>
-    <p>Coming soon!</p>
-  </section>
-
-  <section id="contact">
-    <h2 class="gradient-header">Contact Me</h2>
-    <p>Email: kodurup3066@gmail.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/praneethkoduru/" target="_blank">View Profile</a></p>
-  </section>
-
-  <footer>
-    <p>© 2025 Praneeth Koduru</p>
-  </footer>
-
-  <!-- 🔝 Scroll Progress Back to Top Button -->
-  <a href="#home" id="back-to-top" title="Back to top">
-    <svg class="progress-ring" width="60" height="60">
-      <circle class="progress-ring-bg" cx="30" cy="30" r="26" />
-      <circle class="progress-ring-progress" cx="30" cy="30" r="26" />
-    </svg>
-    ↑
-  </a>
-
-  <!-- 🌌 Particle Background Script -->
-  <script>
-    tsParticles.load("tsparticles", {
-      fullScreen: { enable: true, zIndex: -10 },
-      background: {
-        color: "#0d0d0d"
-      },
-      fpsLimit: 60,
-      interactivity: {
-        events: {
-          onHover: { enable: true, mode: "repulse" },
-          onClick: { enable: true, mode: "push" },
-          resize: true
-        },
-        modes: {
-          repulse: { distance: 80, duration: 0.4 },
-          push: { quantity: 4 }
-        }
-      },
-      particles: {
-        color: { value: ["#BB86FC", "#03A9F4", "#FF9800", "#F50057"] },
-        links: { enable: false },
-        move: {
-          enable: true,
-          speed: 0.6,
-          direction: "none",
-          random: true,
-          straight: false,
-          outModes: { default: "out" }
-        },
-        number: {
-          value: 90,
-          density: { enable: true, area: 800 }
-        },
-        opacity: { value: 0.6 },
-        shape: { type: ["circle", "triangle", "edge"] },
-        size: { value: { min: 1, max: 3 } }
-      },
-      detectRetina: true
-    });
-  </script>
-
-  <!-- 🔁 Scroll Progress Script -->
-  <script>
-    const backToTop = document.getElementById("back-to-top");
-    const progressRing = document.querySelector(".progress-ring-progress");
-    const radius = progressRing.r.baseVal.value;
-    const circumference = 2 * Math.PI * radius;
-    progressRing.style.strokeDasharray = `${circumference} ${circumference}`;
-    progressRing.style.strokeDashoffset = circumference;
-
-    function updateProgress() {
-      const scrollTop = window.scrollY;
-      const docHeight = document.body.scrollHeight - window.innerHeight;
-      const progress = scrollTop / docHeight;
-      const offset = circumference - progress * circumference;
-      progressRing.style.strokeDashoffset = offset;
-
-      backToTop.style.display = scrollTop > 100 ? "block" : "none";
-    }
-
-    window.addEventListener("scroll", updateProgress);
-    window.addEventListener("load", updateProgress);
-  </script>
-
-  <!-- 🍔 Mobile Menu Toggle Script -->
-  <script>
-    function toggleMenu() {
-      const navLinks = document.getElementById("navLinks");
-      navLinks.classList.toggle("show");
-    }
-
-    function closeMenu() {
-      document.getElementById("navLinks").classList.remove("show");
-    }
-  </script>
-</body>
-</html>
+.view-work:hover {
+  color: #0288d1;
+  text-decoration: underline;
+}
