--- a/index.html
+++ b/index.html
@@ -45,12 +45,91 @@
 
   <!-- ✅ Experience Section Updated Here -->
   <section id="experience">
-    <h2 class="gradient-header">Experience</h2>
+    <h2>Experience</h2>
 
-    <!-- Paste your complete experience section here as provided -->
-    <!-- ⬇️ START OF EXPERIENCE CARDS ⬇️ -->
-    <!-- INSERTED EXPERIENCE CONTENT OMITTED HERE FOR BREVITY -->
-    <!-- ⬆️ END OF EXPERIENCE CARDS ⬆️ -->
+    <div class="experience-card">
+      <h3>Product Owner <span>Feb 2025 – Present</span></h3>
+      <h4>Trigint Solutions</h4>
+      <ul>
+        <li>Owned product strategy and backlog for SafeSpect portal, driving inspection efficiency for 10K+ truck violations at freeway weigh stations through Agile execution.</li>
+        <li>Defined, prioritized, and delivered 200+ user stories and 60+ spikes, ensuring seamless workflow enhancements and compliance enforcement.</li>
+        <li>Led UI/UX improvements, enhancing inspector workflows with a React-powered interface.</li>
+        <li>Used SQL to enable data-driven decisions improving regulatory compliance and operational transparency.</li>
+        <li>Implemented RFID-based inventory management for real-time inspection tracking and compliance streamlining.</li>
+        <li>Facilitated Agile ceremonies, aligning cross-functional teams and accelerating product evolution.</li>
+      </ul>
+      <p><strong>Key Skills:</strong> Agile, Business Intelligence, Data Analytics, JIRA, Product Ownership, SQL, API Integrations, UX/UI Optimization, React</p>
+    </div>
+
+    <div class="experience-card">
+      <h3>Business Analyst <span>Nov 2024 – Feb 2025</span></h3>
+      <h4>Leading Response</h4>
+      <ul>
+        <li>Led migration of 147 landing pages from PHP to HTML5 and SCSS, improving performance and UI consistency by 30%.</li>
+        <li>Managed two Agile teams overseeing legal operations, attorney matching, and compliance for 75+ clients.</li>
+        <li>Directed analytics using Tableau to enhance decision-making and Medicare claims processing.</li>
+        <li>Drove Medicare enrollment and retention strategies, improving benefit design and regulatory compliance.</li>
+        <li>Led digital transformation initiatives automating operations with TPAs and provider groups, enhancing user engagement.</li>
+      </ul>
+      <p><strong>Key Skills:</strong> Agile, Business Intelligence, Data Analytics, HTML5, JIRA, PHP, Responsive Design, UX/UI Optimization</p>
+    </div>
+
+    <div class="experience-card">
+      <h3>Technical Product Manager <span>Jan 2024 – Oct 2024</span></h3>
+      <h4>Wabtec Corporation</h4>
+      <ul>
+        <li>Directed migration of eService portal from JBoss to Angular, collaborating with 11 offshore Agile teams.</li>
+        <li>Defined product roadmaps and prioritized 21 features with 350+ user stories for B2B delivery.</li>
+        <li>Implemented Agile UX/UI and security features like RBAC, encryption, and data masking.</li>
+        <li>Managed project timelines and resources ensuring on-time delivery and operational efficiency.</li>
+      </ul>
+      <p><strong>Key Skills:</strong> Agile, Angular, Customer Engagement, JIRA, Linux, MySQL, Product Development, SaaS, UX/UI</p>
+    </div>
+
+    <div class="experience-card">
+      <h3>Business Analyst <span>Oct 2023 – Dec 2023</span></h3>
+      <h4>BODATY LLC</h4>
+      <ul>
+        <li>Collaborated with engineering/design teams in Agile to develop text-to-speech chatbot using Suno AI and AWS Lambda.</li>
+        <li>Led creation of 10+ epics and user stories with bi-weekly sprint delivery using AWS CodePipeline automation.</li>
+        <li>Built Python data pipelines integrated with AWS Glue, improving processing efficiency by 40%.</li>
+        <li>Enhanced KPI reporting with Tableau, improving real-time analytics by 25%.</li>
+      </ul>
+      <p><strong>Key Skills:</strong> Agile, Angular, AWS CodePipeline, AWS Glue, Python, Tableau, JIRA, Shell Scripting</p>
+    </div>
+
+    <div class="experience-card">
+      <h3>Teaching Assistant <span>Aug 2022 – May 2023</span></h3>
+      <h4>University of North Texas</h4>
+      <ul>
+        <li>Mentored 120 students in machine learning and software development (C++ and Python).</li>
+        <li>Developed Python and GitHub tutorials for 40 student groups.</li>
+      </ul>
+      <p><strong>Key Skills:</strong> Linux, Unix, SQL, Python, Shell Scripting, Scipy, Pandas</p>
+    </div>
+
+    <div class="experience-card">
+      <h3>Data Analyst / Business Analyst / Scrum Master <span>Aug 2017 – Aug 2021</span></h3>
+      <h4>Tata Consultancy Services</h4>
+      <ul>
+        <li>Defined strategic product roadmap for Network Optimization, serving 25 clients across Europe.</li>
+        <li>Improved project efficiency by 25% through clear communication and detailed execution.</li>
+        <li>Led Hadoop migration to AWS, achieving cost optimization and scalability.</li>
+        <li>Created JavaScript visualizations for real-time insights guiding product strategy.</li>
+        <li>Balanced competing priorities, consistently meeting aggressive deadlines.</li>
+      </ul>
+    </div>
+
+    <div class="experience-card">
+      <h3>Business Analyst <span>Nov 2016 – Mar 2017</span></h3>
+      <h4>Synergies Castings Ltd., Visakhapatnam, India</h4>
+      <ul>
+        <li>Optimized SQL databases in on-prem and AWS environments, reducing query response times by 30%.</li>
+        <li>Developed Python ETL processes integrated with AWS, improving data processing by 25%.</li>
+        <li>Led SQL Server automation, cutting manual processing time by 40%.</li>
+        <li>Partnered with VP of Product on project brainstorming, timelines, and development coordination.</li>
+      </ul>
+    </div>
   </section>
 
   <section id="education">
