--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <header id="home">
     <img src="images/profile.jpg" alt="Praneeth Koduru" class="profile-photo large" />
   <h1 class="gradient-text">Hi, I'm Praneeth Koduru</h1>
-  <p>Product Manager | Scrum Master | Business Analyst | Technical Product Owner</p>
+  <h3 class="titles">Product Manager | Scrum Master | Business Analyst | Technical Product Owner | Agile Coach</h3>
   <p>
     I thrive at the crossroads of business strategy and team execution. With 6+ years across healthcare and transportation, I’ve led Agile teams, driven digital transformations, and delivered features that improved team efficiency and user satisfaction. Now, I’m focused on building intuitive, scalable products that solve real problems and create real impact. Let’s build something meaningful together.
   </p>
