--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
   <p>
     I thrive at the crossroads of business strategy and team execution. With 6+ years across healthcare and transportation, I’ve led Agile teams, driven digital transformations, and delivered features that improved team efficiency and user satisfaction. Now, I’m focused on building intuitive, scalable products that solve real problems and create real impact. Let’s build something meaningful together.
   </p>
+
+  <div class="intro-buttons">
+    <a href="#projects" class="btn primary-btn">View My Work</a>
+    <a href="files/Praneeth_Koduru_Resume.pdf" class="btn secondary-btn" download>Download Resume</a>
+  </div>
   </header>
 
   <section id="about">
