--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
     <a href="#projects" class="btn primary-btn">View My Work</a>
     <a href="files/Praneeth_Koduru_Resume.pdf" class="btn secondary-btn" download>Download Resume</a>
   </div>
+
+    <div class="intro-stats">
+  <div class="stat">
+    <strong>6+</strong>
+    <span>Years Experience</span>
+  </div>
+  <div class="stat">
+    <strong>20+</strong>
+    <span>Projects Delivered</span>
+  </div>
+  <div class="stat">
+    <strong>10+</strong>
+    <span>Teams Led</span>
+  </div>
+</div>
   </header>
 
   <section id="about">
