--- a/index.html
+++ b/index.html
@@ -177,8 +177,56 @@
   </section>
 
   <section id="skills">
-    <h2 class="gradient-header">Skills</h2>
-    <p>Coming soon!</p>
+    <h2 class="gradient-header">Skills & Expertise</h2>
+  <p class="skills-intro">
+    A comprehensive skill set spanning product management, agile methodologies, business analysis, and technical implementation
+  </p>
+
+  <div class="skills-grid">
+    <div class="skill-group">
+      <h3>Product Management</h3>
+      <ul>
+        <li>Product Strategy & Roadmapping</li>
+        <li>User Story Writing & Backlog Management</li>
+        <li>Market Research & Competitive Analysis</li>
+        <li>Product Lifecycle Management</li>
+        <li>Go-to-Market Strategy</li>
+      </ul>
+    </div>
+
+    <div class="skill-group">
+      <h3>Agile & Scrum</h3>
+      <ul>
+        <li>Scrum Master Certification</li>
+        <li>Sprint Planning & Retrospectives</li>
+        <li>Cross-functional Team Leadership</li>
+        <li>Agile Coaching & Mentoring</li>
+        <li>Kanban & Lean Methodologies</li>
+      </ul>
+    </div>
+
+    <div class="skill-group">
+      <h3>Business Analysis</h3>
+      <ul>
+        <li>Requirements Gathering & Analysis</li>
+        <li>Process Mapping & Optimization</li>
+        <li>Stakeholder Management</li>
+        <li>Business Case Development</li>
+        <li>Risk Assessment & Mitigation</li>
+      </ul>
+    </div>
+
+    <div class="skill-group">
+      <h3>Technical Skills</h3>
+      <ul>
+        <li>SQL & Data Analysis</li>
+        <li>API Documentation & Testing</li>
+        <li>Wireframing & Prototyping</li>
+        <li>JIRA & Confluence</li>
+        <li>Analytics & KPI Tracking</li>
+      </ul>
+    </div>
+  </div>
   </section>
 
   <section id="projects">
