--- a/index.html
+++ b/index.html
@@ -184,7 +184,10 @@
 
   <div class="skills-grid">
     <div class="skill-group">
-      <h3><img src="icons/target.svg" alt="Product Management Icon" class="skill-icon"> Product Management</h3>
+      <div class="skill-title">
+        <img src="icons/target.svg" alt="Product Management Icon" class="skill-icon">
+        <h3>Product Management</h3>
+      </div>
       <ul>
         <li>Product Strategy & Roadmapping</li>
         <li>User Story Writing & Backlog Management</li>
@@ -195,7 +198,10 @@
     </div>
 
     <div class="skill-group">
-      <h3><img src="icons/refresh-cw.svg" alt="Agile Icon" class="skill-icon"> Agile & Scrum</h3>
+      <div class="skill-title">
+        <img src="icons/refresh-cw.svg" alt="Agile Icon" class="skill-icon">
+        <h3>Agile & Scrum</h3>
+      </div>
       <ul>
         <li>Scrum Master Certification</li>
         <li>Sprint Planning & Retrospectives</li>
@@ -206,7 +212,10 @@
     </div>
 
     <div class="skill-group">
-      <h3><img src="icons/bar-chart-2.svg" alt="Business Analysis Icon" class="skill-icon"> Business Analysis</h3>
+      <div class="skill-title">
+        <img src="icons/bar-chart-2.svg" alt="Business Analysis Icon" class="skill-icon">
+        <h3>Business Analysis</h3>
+      </div>
       <ul>
         <li>Requirements Gathering & Analysis</li>
         <li>Process Mapping & Optimization</li>
@@ -217,7 +226,10 @@
     </div>
 
     <div class="skill-group">
-      <h3><img src="icons/code.svg" alt="Technical Skills Icon" class="skill-icon"> Technical Skills</h3>
+      <div class="skill-title">
+        <img src="icons/code.svg" alt="Technical Skills Icon" class="skill-icon">
+        <h3>Technical Skills</h3>
+      </div>
       <ul>
         <li>SQL & Data Analysis</li>
         <li>API Documentation & Testing</li>
