--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <div id="tsparticles"></div>
 
   <!-- 🌐 Top Navigation -->
-  <nav class="top-nav">
-    <ul class="nav-links">
+  <nav class="top-nav transparent-nav">
+  <div class="nav-wrapper">
+    <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#experience">Experience</a></li>
@@ -22,8 +23,9 @@
       <li><a href="#skills">Skills</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
-  </nav>
-
+  </div>
+</nav>
+  
   <header id="home">
     <img src="images/profile.jpg" alt="Praneeth Koduru" class="profile-photo large" />
   <h1 class="gradient-text">Hi, I'm Praneeth Koduru</h1>
