hamburger menu for mobile

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 
   <!-- 🌐 Top Navigation -->
   <nav class="top-nav transparent-nav">
-  <div class="nav-wrapper">
-    <ul>
+   <div class="nav-wrapper">
+    <div class="hamburger" id="hamburger">☰</div>
+
+    <ul class="nav-links" id="navLinks">
+      <span class="close-btn" id="closeBtn">×</span>
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#experience">Experience</a></li>
@@ -329,5 +332,25 @@
     window.addEventListener("scroll", updateProgress);
     window.addEventListener("load", updateProgress);
   </script>
+
+  <script>
+  const hamburger = document.getElementById("hamburger");
+  const navLinks = document.getElementById("navLinks");
+  const closeBtn = document.getElementById("closeBtn");
+
+  hamburger.addEventListener("click", () => {
+    navLinks.classList.add("show");
+  });
+
+  closeBtn.addEventListener("click", () => {
+    navLinks.classList.remove("show");
+  });
+
+  navLinks.querySelectorAll("a").forEach(link =>
+    link.addEventListener("click", () => {
+      navLinks.classList.remove("show");
+    })
+  );
+</script>
 </body>
 </html>
