Add gradient to experience

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <!-- ✅ Experience Section Updated Here -->
   <section id="experience">
-    <h2>Experience</h2>
+    <h2 class="gradient-header">Experience</h2>
 
     <div class="experience-card">
       <h3>Product Owner <span>Feb 2025 – Present</span></h3>
