--- a/index.html
+++ b/index.html
@@ -173,12 +173,61 @@
 
   <section id="certifications">
     <h2 class="gradient-header">Certifications</h2>
-    <ul>
-      <li>Certified Scrum Master (CSM)</li>
-      <li>SAFe 6 Certified Scrum Master</li>
-      <li>HIPAA for Professionals</li>
-      <li>Power BI Data Analyst Associate</li>
-    </ul>
+  <div class="cert-grid">
+
+    <div class="cert-card">
+      <img src="icons/ai.svg" alt="Generative AI Icon" />
+      <div>
+        <h3>Generative AI for Product Managers</h3>
+        <p><strong>Issuing Authority:</strong> LinkedIn Learning</p>
+        <p><strong>Credential:</strong> 
+          <a href="https://www.linkedin.com/learning/certificates/a41f8e4e6745809068443816da56340b0664a50913b7bef5d57fae84e3cbf579" target="_blank">
+            View Certificate
+          </a>
+        </p>
+        <p><strong>Key Skills:</strong> AI Product Strategy, Prompt Engineering, AI Lifecycle Integration</p>
+      </div>
+    </div>
+
+    <div class="cert-card">
+      <img src="icons/project.svg" alt="PMP Icon" />
+      <div>
+        <h3>Project Management Professional (PMP)</h3>
+        <p><strong>Issuing Authority:</strong> Project Management Institute</p>
+        <p><strong>Credential:</strong> Not Available</p>
+        <p><strong>Key Skills:</strong> Project Planning, Risk Management, Stakeholder Communication, Budgeting</p>
+      </div>
+    </div>
+
+    <div class="cert-card">
+      <img src="icons/agile.svg" alt="Agile Project Management Icon" />
+      <div>
+        <h3>Atlassian Agile Project Management Professional Certificate</h3>
+        <p><strong>Issuing Authority:</strong> Atlassian</p>
+        <p><strong>Credential:</strong> 
+          <a href="https://www.linkedin.com/learning/certificates/5d127e3c541d0806e7728f64dadc958a3788590707273c9e0b6e5d698d7ebf3c" target="_blank">
+            View Certificate
+          </a>
+        </p>
+        <p><strong>Key Skills:</strong> Scrum, Kanban, Agile Frameworks, Team Collaboration, Jira</p>
+      </div>
+    </div>
+
+    <div class="cert-card">
+      <img src="icons/scrum.svg" alt="Scrum Product Owner Icon" />
+      <div>
+        <h3>Professional Scrum Product Owner™ I (PSPO I)</h3>
+        <p><strong>Issuing Authority:</strong> Scrum.org</p>
+        <p><strong>Credential:</strong> 
+          <a href="https://www.credly.com/badges/49ba24bb-d48a-4b16-96a5-a88285b1510f/linked_in_profile" target="_blank">
+            View Badge
+          </a>
+        </p>
+        <p><strong>Key Skills:</strong> Product Ownership, Agile Requirements, Value Maximization, Scrum Framework</p>
+      </div>
+    </div>
+
+  </div>
   </section>
 
   <section id="skills">
