add badges,icons and credential for pmp

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   <div class="cert-grid">
 
     <div class="cert-card">
-      <img src="icons/ai.svg" alt="Generative AI Icon" />
+      <img src="icons/linkedin.png" alt="Generative AI Icon" />
       <div>
         <h3>Generative AI for Product Managers</h3>
         <p><strong>Issuing Authority:</strong> LinkedIn Learning</p>
@@ -190,19 +190,23 @@
     </div>
 
     <div class="cert-card">
-      <img src="icons/project.svg" alt="PMP Icon" />
+      <img src="icons/pmp.png" alt="PMP Icon" />
       <div>
         <h3>Project Management Professional (PMP)</h3>
         <p><strong>Issuing Authority:</strong> Project Management Institute</p>
-        <p><strong>Credential:</strong> Not Available</p>
+        <p><strong>Credential:</strong> 
+          <a href="https://www.credly.com/badges/3da7167f-83af-48a6-816a-23cb2e97bf69" target="_blank">
+            View Badge
+          </a>
+        </p>
         <p><strong>Key Skills:</strong> Project Planning, Risk Management, Stakeholder Communication, Budgeting</p>
       </div>
     </div>
 
     <div class="cert-card">
-      <img src="icons/agile.svg" alt="Agile Project Management Icon" />
+      <img src="icons/linkedin.png" alt="Atlassian Agile Project Management Icon" />
       <div>
-        <h3>Atlassian Agile Project Management Professional Certificate</h3>
+        <h3>Atlassian Agile Project Management Certificate</h3>
         <p><strong>Issuing Authority:</strong> Atlassian</p>
         <p><strong>Credential:</strong> 
           <a href="https://www.linkedin.com/learning/certificates/5d127e3c541d0806e7728f64dadc958a3788590707273c9e0b6e5d698d7ebf3c" target="_blank">
@@ -214,7 +218,7 @@
     </div>
 
     <div class="cert-card">
-      <img src="icons/scrum.svg" alt="Scrum Product Owner Icon" />
+      <img src="icons/pspo.png" alt="PSPO I Badge" />
       <div>
         <h3>Professional Scrum Product Owner™ I (PSPO I)</h3>
         <p><strong>Issuing Authority:</strong> Scrum.org</p>
