--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div class="intro-stats">
   <div class="stat">
-    <strong id="yearsExperience">—</strong>
+    <strong id="yearsExperience">...</strong>
     <span>Years Experience</span>
   </div>
   <div class="stat">
@@ -123,7 +123,7 @@
       <p><strong>Key Skills:</strong> Agile, Angular, AWS CodePipeline, AWS Glue, Python, Tableau, JIRA, Shell Scripting</p>
     </div>
 
-    <div class="experience-card">
+    <div class="experience-card" data-skip="true">
       <h3>Teaching Assistant <span>Aug 2022 – May 2023</span></h3>
       <h4>University of North Texas</h4>
       <ul>
@@ -408,10 +408,13 @@
 
 <script>
   function calculateAccurateExperience() {
-    const spans = document.querySelectorAll("#experience .experience-card h3 span");
+    const cards = document.querySelectorAll("#experience .experience-card:not([data-skip='true'])");
     const experienceMonths = new Set();
 
-    spans.forEach(span => {
+    cards.forEach(card => {
+      const span = card.querySelector("h3 span");
+      if (!span) return;
+
       const text = span.textContent.trim(); // Example: "Feb 2025 – Present"
       const [startText, endText] = text.split("–").map(t => t.trim());
 
@@ -456,6 +459,7 @@
 
   window.addEventListener("load", calculateAccurateExperience);
 </script>
+
 
 
 </body>
